Fixing CORS, external reduced JS, bouncy heart

--- a/_dist/index.html
+++ b/_dist/index.html
@@ -11,6 +11,10 @@
     <meta name="author" content="Jamie Evawin" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link
+      rel="preconnect"
+      href="https://search-the-source-code.herokuapp.com/"
+    />
     <link rel="stylesheet" href="/styles/output.css" />
   </head>
 
@@ -46,7 +50,7 @@
             autocomplete="off"
             autocapitalize="off"
             name="query"
-            placeholder="Code to search for, e.g.:&#13;&#10;&#13;&#10;<!DOCTYPE html>&#13;&#10;&#13;&#10;or&#13;&#10;&#13;&#10;$(document).ready(function(){"
+            placeholder="Code to search for, e.g.:&#13;&#10;&#13;&#10;&lt;!doctype html&gt;&#13;&#10;&#13;&#10;or&#13;&#10;&#13;&#10;$(document).ready(function(){"
             rows="10"
           ></textarea>
           <input
@@ -58,161 +62,25 @@
         </form>
       </div>
 
-      <hr />
+      <hr class="my-6" />
 
-      <!-- Loading icon -->
-      <div class="loader"></div>
-
-      <!-- Pages searched, pages with results, total results, etc. -->
-      <div class="stats">
-        <!-- Total pages -->
-        <div class="tpg">
-          <h4>Searched</h4>
-          <h3 data-tpg></h3>
-          <h4>pages</h4>
-        </div>
-
-        <!-- Total results -->
-        <div class="tot">
-          <h4>Found</h4>
-          <h3 data-tot></h3>
-          <h4>results</h4>
-        </div>
-
-        <!-- Results pages -->
-        <div class="rpg">
-          <h4>On</h4>
-          <h3 data-rpg></h3>
-          <h4>pages</h4>
-        </div>
+      <!-- pages searched, pages with results, total results, etc. -->
+      <div class="flex">
+        <!-- TODO this -->
       </div>
-      <div class="results"></div>
     </div>
-    <footer class="center">
-      <a
-        href="https://jamiegoodwin.uk/?utm_campaign=Development&utm_source=searchthesourcecode.com"
-        target="_blank"
-        ><img src="me-circle.png" height="40" width="40"
+    <footer class="text-center mt-6 mb-4">
+      <a class="inline-block" href="https://jamie.evawin.uk/" target="_blank"
+        ><img
+          class="rounded-full shadow-sm"
+          src="https://en.gravatar.com/userimage/191194893/aae9a83120d84bc54587915f6bee323a.jpg?size=80"
+          height="40"
+          width="40"
       /></a>
       <p>
-        Built with <span class="love">&hearts;</span> and &copy; 2017 by
-        <a
-          href="https://jamiegoodwin.uk/?utm_campaign=Development&utm_source=searchthesourcecode.com"
-          target="_blank"
-          >Jamie Goodwin</a
-        >
+        Built with <span class="text-red-500 motion-safe:animate-bounce inline-block">&hearts;</span> by
+        <a class="pb-1 border-b-2 border-red-500 text-red-500" href="https://jamie.evawin.uk/" target="_blank">Jamie Evawin</a>
       </p>
     </footer>
-
-    <!-- JS -->
-    <script>
-      "use strict";
-
-      // $global variabiles
-      var $sch = document.getElementsByName("search")[0],
-        $spt = document.createElement("script"),
-        $hed = document.getElementsByTagName("head")[0],
-        $scr = document.body,
-        $dmn = document.getElementsByName("domain")[0],
-        $qry = document.getElementsByName("query")[0],
-        $sbt = document.getElementById("submit"),
-        $ldr = document.getElementsByClassName("loader")[0],
-        $res = document.getElementsByClassName("results")[0],
-        $sts = document.getElementsByClassName("stats")[0],
-        $tot = document.querySelectorAll("[data-tot]")[0],
-        $rpg = document.querySelectorAll("[data-rpg]")[0],
-        $tpg = document.querySelectorAll("[data-tpg]")[0],
-        $url = "https://search-the-source-code.herokuapp.com/";
-
-      $sch.onsubmit = function () {
-        // Show loading
-        status(1);
-
-        // TODO fetch()
-        $spt.src = $url + "?domain=" + $dmn.value + "&search=" + $qry.value;
-        $hed.appendChild($spt);
-
-        return false;
-      };
-
-      function stsc(res) {
-        // Disable loading
-        status(0);
-
-        // Local variables
-        var results = JSON.parse(res),
-          out = "<ul>",
-          tot = 0,
-          tpg = 0,
-          rpg = 0;
-
-        // Build HTML results
-        for (var url in results) {
-          if (results.hasOwnProperty(url)) {
-            // Increment total searched pages
-            tpg++;
-
-            if (results[url].length > 0) {
-              // Add 1 page to results pages
-              rpg++;
-
-              // Add number of results to total
-              tot += results[url].length;
-
-              // Build list
-              out +=
-                '<li><a target="_blank" href="' +
-                url +
-                '">' +
-                url +
-                "</a><span>Chars: " +
-                results[url].join(", ") +
-                "</span>";
-            }
-          }
-        }
-
-        // Fill results div
-        out += "</ul>";
-        $res.innerHTML = out;
-        $tpg.innerHTML = tpg;
-        $rpg.innerHTML = rpg;
-        $tot.innerHTML = tot;
-
-        scrollTo($scr, $sts.offsetTop, 500);
-      }
-
-      function status(status) {
-        if (status === 0) {
-          // Enable the form, search complete
-          $sbt.removeAttribute("disabled");
-          $ldr.style.display = "none";
-
-          // Show results
-          $sts.style.display = "block";
-          $res.style.display = "block";
-        } else {
-          // Disable form, show we're searching
-          $sbt.setAttribute("disabled", "true");
-          $ldr.style.display = "block";
-
-          // Hide results
-          $sts.style.display = "none";
-          $res.style.display = "none";
-        }
-      }
-
-      function scrollTo(element, to, duration) {
-        if (duration <= 0) return;
-        var difference = to - element.scrollTop;
-        var perTick = (difference / duration) * 10;
-
-        setTimeout(function () {
-          element.scrollTop = element.scrollTop + perTick;
-          if (element.scrollTop === to) return;
-          scrollTo(element, to, duration - 10);
-        }, 10);
-      }
-    </script>
   </body>
 </html>
